examples/test/testpolicy19476.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19476
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key13: value33
      key28: value19
      key33: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value45
          key32: value13
          key27: value6
